# patty_cake

./: .gitignore  clang.ini  find_src.py  meson.build
build_win/patty_cake/: patty_cake.sln  patty_cake.vcxproj  patty_cake.vcxproj.filters
build_win/test/: test.vcxproj  test.vcxproj.filters
build_win/test_client/: test_client.vcxproj  test_client.vcxproj.filters
old/: patty_cake.h
src/: patty_cake.cpp  patty_cake.h
src/cakes/: _piece.cpp  _piece.h  base.cpp  base.h  web_rtc_cake.cpp  web_rtc_cake.h  web_socket_cake.cpp  web_socket_cake.h
test/: test.cpp
test/client/: client.cpp  client.h
test/common/: _packet_types.h  packet.cpp  packet.h
test/common/packets/: simple_packets.cpp  simple_packets.h  web_rtc_packets.cpp  web_rtc_packets.h
test/server/: server.cpp  server.h
test_client/: client.cpp
